cmake_minimum_required (VERSION 2.6)
project (TBG)
include_directories(${PROJECT_SOURCE_DIR}/include)
list(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake/module)
find_package(OpenMP)
if (OPENMP_FOUND)
    set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
    set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
else()
    message(FATAL_ERROR "no OpenMP supprot")
endif()

#set(LINK_DIR /usr/local/lib)
#link_directories(${LINK_DIR})
SET( CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -std=c++17 -O3 -ltcmalloc_minimal -march=native -Wall -DINFO")
add_executable(TBSG_index TBSG.cpp cover_tree.cpp TBSG_index.cpp)
add_executable(TBSG_search TBSG.cpp cover_tree.cpp TBSG_search.cpp)
